--- a/force-app/main/default/classes/SummitEventsLinkHandler.cls
+++ b/force-app/main/default/classes/SummitEventsLinkHandler.cls
@@ -1,6 +1,6 @@
-public with sharing class SummitEventsRtfLinkHandler {
-    public static void run(List<Summit_Events__c> newList) {
-        new SummitEventsRtfLinkPipeline(newList).run();
+public with sharing class SummitEventsLinkHandler {
+    public static void run(Map<Id,Summit_Events__c> newMap) {
+        new SummitEventsRtfLinkPipeline(newMap).run();
     }
 
     // Future consideration: add async logic here
